# PlockY

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.MD  post.ipynb  run_benchmarks.ps1  run_benchmarks.sh
.github/workflows/: cmake-multi-platform.yml  profiling,yml  profiling.yml
benchmarks/: CMakeLists.txt  TPE_abb20_2step.cpp  TPE_abb20_3step.cpp  TPE_abb320_2step.cpp  TPE_abb320_3step.cpp  TPE_abb80.cpp  TPE_abb80_2step.cpp  TPE_abb80_3step.cpp  test0.cpp  test1.cpp  test_micro.cpp  test_micro2.cpp
benchmarks_data/ABB_20/: LHS_1_full_sparse.csv  RHS0_1_full.csv  block_0_0.csv  block_0_1.csv  block_0_4.csv  block_1_0.csv  block_1_1.csv  block_1_4.csv  block_2_2.csv  block_2_3.csv  block_2_4.csv  block_3_3.csv  block_3_4.csv  block_4_0.csv  block_4_1.csv  block_4_2.csv  block_4_3.csv  block_4_4.csv  blocks.blk  guess.vblk  rhs_block_0.csv  rhs_block_1.csv  rhs_block_2.csv  rhs_block_3.csv  rhs_block_4.csv  vector_rhs.vblk
benchmarks_data/ABB_320/: RHS0_1_full.csv  block_0_0.csv  block_0_1.csv  block_0_4.csv  block_1_0.csv  block_1_1.csv  block_1_4.csv  block_2_2.csv  block_2_4.csv  block_3_2.csv  block_3_3.csv  block_3_4.csv  block_4_0.csv  block_4_1.csv  block_4_2.csv  block_4_3.csv  block_4_4.csv  blocks.blk  guess.vblk  rhs_block_0.csv  rhs_block_1.csv  rhs_block_2.csv  rhs_block_3.csv  rhs_block_4.csv  vector_rhs.vblk
benchmarks_data/ABB_640/: RHS0_1_full.csv  block_0_0.csv  block_0_1.csv  block_0_4.csv  block_1_0.csv  block_1_1.csv  block_1_4.csv  block_2_2.csv  block_2_4.csv  block_3_2.csv  block_3_3.csv  block_3_4.csv  block_4_0.csv  block_4_1.csv  block_4_2.csv  block_4_3.csv  block_4_4.csv  blocks.blk  guess.vblk  rhs_block_0.csv  rhs_block_1.csv  rhs_block_2.csv  rhs_block_3.csv  rhs_block_4.csv  vector_rhs.vblk
benchmarks_data/ABB_80/: RHS0_1_full.csv  block_0_0.csv  block_0_1.csv  block_0_4.csv  block_1_0.csv  block_1_1.csv  block_1_4.csv  block_2_2.csv  block_2_4.csv  block_3_2.csv  block_3_3.csv  block_3_4.csv  block_4_0.csv  block_4_1.csv  block_4_2.csv  block_4_3.csv  block_4_4.csv  blocks.blk  guess.vblk  rhs_block_0.csv  rhs_block_1.csv  rhs_block_2.csv  rhs_block_3.csv  rhs_block_4.csv  vector_rhs.vblk
benchmarks_data/micro/: block_0_0.csv  block_0_2.csv  block_2_1.csv  block_2_2.csv  blocks.blk  fullmat.csv  guess.vblk  vector_rhs.vblk
benchmarks_data/test0/: blocks.blk  fullmat.csv  rhs_block_0.csv  rhs_block_2.csv  vector.csv  vector_rhs.vblk
benchmarks_data/test1/: block_2_2.csv  blocks.blk  fullmat.csv  vector_rhs.vblk
data/blk_files/: 5b5_withNonSquareBlocks.blk  5b5_withNonSquareBlocks_dense.blk  5b5_withNonSquareBlocks_sparse.blk  5b5_withNonSquareBlocks_vector.vblk  5b5guess.vblk  benchmark1.vblk
data/mat_shop/: dense2.csv  sparse2.csv
data/mat_shop/55files/: dense24.csv  sparse44.csv
data/mat_shop/benchmark_1/: fb.csv  fc.csv  h.csv  hc.csv  u1.csv  u2.csv  u3.csv
data/mat_shop/dense/: dense.csv
data/mat_shop/sparse/: Trefethen_20b.mtx  sparse.csv
data/vec_shop/benchmark_1/: rhs_f.csv  rhs_h.csv  rhs_u1.csv  rhs_u2.csv
docs/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt  ReadMe.md  benchmark.cpp  block_loader.cpp  block_loading.cpp  block_matrix_loading.cpp  blocks.cpp  blocks_structures.cpp  blocksolver.cpp  blocksolver.cxx  prova.py  regroup_sparse.cpp  regrouping_a_55.cpp  regrouping_a_55_nonhomogenous.cpp  regrouping_a_55_nonhomogenous.cxx  sol_split.csv  solving_a_system.cpp  splitting_strategy.cpp
examples/blk_files/: 55_diff.blk  55block.blk  5b5_for_solver.blk  5b5_withNonSquareBlocks.blk  5b5_withNonSquareBlocks_sparse.blk  5b5_withNonSquareBlocks_vector.vblk  5v_for_solver.vblk  5v_guess_for_solver.vblk  benchmark1.blk  benchmark_guess.vblk  saddle_point.blk  saddle_point_sparse.blk  simple_block_mat.blk  simple_block_vect.vblk  simple_vector.vblk
examples/mat_shop/: dense.csv  dense2.csv  sparse.csv
examples/mat_shop/55files/: dense42.csv  dense44.csv  sparse24.csv  sparse42.csv
examples/mat_shop/benchmark_1/: f.csv  ha.csv  u4.csv  ub.csv  uc.csv  ud.csv
include/: PlockY.hpp
include/PlockY/: AbstractBlockLoaderFactory.hpp  BinBlockLoaderFactory.hpp  Block.hpp  BlockLoader.hpp  BlockLoaderFactory.hpp  BlockMatrix.hpp  BlockMatrixLoader.hpp  BlockSolverBase.hpp  BlockVector.hpp  BlockVectorLoader.hpp  CSVBlockLoader.hpp  CSVBlockLoaderFactory.hpp  CSVVecBlockLoader.hpp  DenseBlock.hpp  LUBlockSolver.hpp  MTXBlockLoaderFactory.hpp  Regrouper.hpp  Solver.hpp  SparseBlock.hpp  Step.hpp  Strategy.hpp  TransposeOf.hpp  VecBlock.hpp  VectorBlockLoaderFactory.hpp  VectorRHS.hpp  VectorRHSLoader.hpp  ZeroBlock.hpp  concat.hpp  loader_helper.hpp  regroup_helper.hpp  test_no_eigen.hpp  test_w_eigen.hpp
src/: CMakeLists.txt
src/PlockY/: Strategy.cpp  loader_helper.cpp  test_no_eigen.cpp  test_w_eigen.cpp
test/: CMakeLists.txt  integration.cpp  test_BlockMatrix.cpp  test_CSVDenseLoader.cpp  test_DenseBlock.cpp  test_Eigen.cpp  test_MyClass.cpp  test_MyEigenClass.cpp  test_SparseBlock.cpp  test_all.cpp  test_blkLoader.cpp  test_blkMat.cpp  test_luSolver.cpp  test_regrouper.cpp  test_solver.cpp  test_solver2.cpp  test_solver3.cpp  test_vecRHS.cpp  unit.cpp
test/blk_files/: test.blk  test.vblk  test5.vblk  test_base.blk  test_solver.blk  test_solver.vblk  test_solver2.blk  test_solver_vario.blk
test/mat_shop/: dense1.csv  dense22.csv  dense22_2.csv  dense22_3.csv  dense24.csv  dense33.csv  dense42.csv  dense44.csv  sparse1.csv  sparse33.csv  zeros_22.csv
test/vec_shop/: vec2.csv  vec3.csv
